--- a/app/sass/_sprite.scss
+++ b/app/sass/_sprite.scss
@@ -9,132 +9,341 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
+$arrow-down-red-name: 'arrow-down-red';
+$arrow-down-red-x: 65px;
+$arrow-down-red-y: 80px;
+$arrow-down-red-offset-x: -65px;
+$arrow-down-red-offset-y: -80px;
+$arrow-down-red-width: 16px;
+$arrow-down-red-height: 8px;
+$arrow-down-red-total-width: 191px;
+$arrow-down-red-total-height: 181px;
+$arrow-down-red-image: '../images/sprite.png';
+$arrow-down-red: (65px, 80px, -65px, -80px, 16px, 8px, 191px, 181px, '../images/sprite.png', 'arrow-down-red', );
+$arrow-down-white-name: 'arrow-down-white';
+$arrow-down-white-x: 78px;
+$arrow-down-white-y: 163px;
+$arrow-down-white-offset-x: -78px;
+$arrow-down-white-offset-y: -163px;
+$arrow-down-white-width: 16px;
+$arrow-down-white-height: 8px;
+$arrow-down-white-total-width: 191px;
+$arrow-down-white-total-height: 181px;
+$arrow-down-white-image: '../images/sprite.png';
+$arrow-down-white: (78px, 163px, -78px, -163px, 16px, 8px, 191px, 181px, '../images/sprite.png', 'arrow-down-white', );
+$arrow-left-name: 'arrow-left';
+$arrow-left-x: 180px;
+$arrow-left-y: 54px;
+$arrow-left-offset-x: -180px;
+$arrow-left-offset-y: -54px;
+$arrow-left-width: 11px;
+$arrow-left-height: 22px;
+$arrow-left-total-width: 191px;
+$arrow-left-total-height: 181px;
+$arrow-left-image: '../images/sprite.png';
+$arrow-left: (180px, 54px, -180px, -54px, 11px, 22px, 191px, 181px, '../images/sprite.png', 'arrow-left', );
+$arrow-right-dark-name: 'arrow-right-dark';
+$arrow-right-dark-x: 180px;
+$arrow-right-dark-y: 0px;
+$arrow-right-dark-offset-x: -180px;
+$arrow-right-dark-offset-y: 0px;
+$arrow-right-dark-width: 11px;
+$arrow-right-dark-height: 22px;
+$arrow-right-dark-total-width: 191px;
+$arrow-right-dark-total-height: 181px;
+$arrow-right-dark-image: '../images/sprite.png';
+$arrow-right-dark: (180px, 0px, -180px, 0px, 11px, 22px, 191px, 181px, '../images/sprite.png', 'arrow-right-dark', );
+$arrow-right-name: 'arrow-right';
+$arrow-right-x: 180px;
+$arrow-right-y: 27px;
+$arrow-right-offset-x: -180px;
+$arrow-right-offset-y: -27px;
+$arrow-right-width: 11px;
+$arrow-right-height: 22px;
+$arrow-right-total-width: 191px;
+$arrow-right-total-height: 181px;
+$arrow-right-image: '../images/sprite.png';
+$arrow-right: (180px, 27px, -180px, -27px, 11px, 22px, 191px, 181px, '../images/sprite.png', 'arrow-right', );
+$arrow-up-red-name: 'arrow-up-red';
+$arrow-up-red-x: 36px;
+$arrow-up-red-y: 163px;
+$arrow-up-red-offset-x: -36px;
+$arrow-up-red-offset-y: -163px;
+$arrow-up-red-width: 16px;
+$arrow-up-red-height: 8px;
+$arrow-up-red-total-width: 191px;
+$arrow-up-red-total-height: 181px;
+$arrow-up-red-image: '../images/sprite.png';
+$arrow-up-red: (36px, 163px, -36px, -163px, 16px, 8px, 191px, 181px, '../images/sprite.png', 'arrow-up-red', );
+$arrow-up-white-name: 'arrow-up-white';
+$arrow-up-white-x: 57px;
+$arrow-up-white-y: 163px;
+$arrow-up-white-offset-x: -57px;
+$arrow-up-white-offset-y: -163px;
+$arrow-up-white-width: 16px;
+$arrow-up-white-height: 8px;
+$arrow-up-white-total-width: 191px;
+$arrow-up-white-total-height: 181px;
+$arrow-up-white-image: '../images/sprite.png';
+$arrow-up-white: (57px, 163px, -57px, -163px, 16px, 8px, 191px, 181px, '../images/sprite.png', 'arrow-up-white', );
 $ball-1-name: 'ball-1';
-$ball-1-x: 0px;
-$ball-1-y: 0px;
-$ball-1-offset-x: 0px;
-$ball-1-offset-y: 0px;
+$ball-1-x: 111px;
+$ball-1-y: 94px;
+$ball-1-offset-x: -111px;
+$ball-1-offset-y: -94px;
 $ball-1-width: 19px;
 $ball-1-height: 22px;
-$ball-1-total-width: 85px;
-$ball-1-total-height: 67px;
+$ball-1-total-width: 191px;
+$ball-1-total-height: 181px;
 $ball-1-image: '../images/sprite.png';
-$ball-1: (0px, 0px, 0px, 0px, 19px, 22px, 85px, 67px, '../images/sprite.png', 'ball-1', );
+$ball-1: (111px, 94px, -111px, -94px, 19px, 22px, 191px, 181px, '../images/sprite.png', 'ball-1', );
 $card-name: 'card';
-$card-x: 69px;
-$card-y: 0px;
-$card-offset-x: -69px;
-$card-offset-y: 0px;
+$card-x: 128px;
+$card-y: 132px;
+$card-offset-x: -128px;
+$card-offset-y: -132px;
 $card-width: 16px;
 $card-height: 16px;
-$card-total-width: 85px;
-$card-total-height: 67px;
+$card-total-width: 191px;
+$card-total-height: 181px;
 $card-image: '../images/sprite.png';
-$card: (69px, 0px, -69px, 0px, 16px, 16px, 85px, 67px, '../images/sprite.png', 'card', );
+$card: (128px, 132px, -128px, -132px, 16px, 16px, 191px, 181px, '../images/sprite.png', 'card', );
+$facebook-link-name: 'facebook-link';
+$facebook-link-x: 37px;
+$facebook-link-y: 94px;
+$facebook-link-offset-x: -37px;
+$facebook-link-offset-y: -94px;
+$facebook-link-width: 32px;
+$facebook-link-height: 33px;
+$facebook-link-total-width: 191px;
+$facebook-link-total-height: 181px;
+$facebook-link-image: '../images/sprite.png';
+$facebook-link: (37px, 94px, -37px, -94px, 32px, 33px, 191px, 181px, '../images/sprite.png', 'facebook-link', );
+$google-link-name: 'google-link';
+$google-link-x: 74px;
+$google-link-y: 94px;
+$google-link-offset-x: -74px;
+$google-link-offset-y: -94px;
+$google-link-width: 32px;
+$google-link-height: 33px;
+$google-link-total-width: 191px;
+$google-link-total-height: 181px;
+$google-link-image: '../images/sprite.png';
+$google-link: (74px, 94px, -74px, -94px, 32px, 33px, 191px, 181px, '../images/sprite.png', 'google-link', );
+$ic1-name: 'ic1';
+$ic1-x: 65px;
+$ic1-y: 0px;
+$ic1-offset-x: -65px;
+$ic1-offset-y: 0px;
+$ic1-width: 36px;
+$ic1-height: 37px;
+$ic1-total-width: 191px;
+$ic1-total-height: 181px;
+$ic1-image: '../images/sprite.png';
+$ic1: (65px, 0px, -65px, 0px, 36px, 37px, 191px, 181px, '../images/sprite.png', 'ic1', );
+$ic2-name: 'ic2';
+$ic2-x: 65px;
+$ic2-y: 42px;
+$ic2-offset-x: -65px;
+$ic2-offset-y: -42px;
+$ic2-width: 36px;
+$ic2-height: 33px;
+$ic2-total-width: 191px;
+$ic2-total-height: 181px;
+$ic2-image: '../images/sprite.png';
+$ic2: (65px, 42px, -65px, -42px, 36px, 33px, 191px, 181px, '../images/sprite.png', 'ic2', );
+$ic3-name: 'ic3';
+$ic3-x: 0px;
+$ic3-y: 94px;
+$ic3-offset-x: 0px;
+$ic3-offset-y: -94px;
+$ic3-width: 32px;
+$ic3-height: 33px;
+$ic3-total-width: 191px;
+$ic3-total-height: 181px;
+$ic3-image: '../images/sprite.png';
+$ic3: (0px, 94px, 0px, -94px, 32px, 33px, 191px, 181px, '../images/sprite.png', 'ic3', );
+$ic4-name: 'ic4';
+$ic4-x: 143px;
+$ic4-y: 74px;
+$ic4-offset-x: -143px;
+$ic4-offset-y: -74px;
+$ic4-width: 29px;
+$ic4-height: 30px;
+$ic4-total-width: 191px;
+$ic4-total-height: 181px;
+$ic4-image: '../images/sprite.png';
+$ic4: (143px, 74px, -143px, -74px, 29px, 30px, 191px, 181px, '../images/sprite.png', 'ic4', );
+$ic5-name: 'ic5';
+$ic5-x: 0px;
+$ic5-y: 132px;
+$ic5-offset-x: 0px;
+$ic5-offset-y: -132px;
+$ic5-width: 35px;
+$ic5-height: 26px;
+$ic5-total-width: 191px;
+$ic5-total-height: 181px;
+$ic5-image: '../images/sprite.png';
+$ic5: (0px, 132px, 0px, -132px, 35px, 26px, 191px, 181px, '../images/sprite.png', 'ic5', );
+$ico-holder-name: 'ico-holder';
+$ico-holder-x: 0px;
+$ico-holder-y: 0px;
+$ico-holder-offset-x: 0px;
+$ico-holder-offset-y: 0px;
+$ico-holder-width: 60px;
+$ico-holder-height: 89px;
+$ico-holder-total-width: 191px;
+$ico-holder-total-height: 181px;
+$ico-holder-image: '../images/sprite.png';
+$ico-holder: (0px, 0px, 0px, 0px, 60px, 89px, 191px, 181px, '../images/sprite.png', 'ico-holder', );
+$instagram-link-name: 'instagram-link';
+$instagram-link-x: 106px;
+$instagram-link-y: 38px;
+$instagram-link-offset-x: -106px;
+$instagram-link-offset-y: -38px;
+$instagram-link-width: 32px;
+$instagram-link-height: 33px;
+$instagram-link-total-width: 191px;
+$instagram-link-total-height: 181px;
+$instagram-link-image: '../images/sprite.png';
+$instagram-link: (106px, 38px, -106px, -38px, 32px, 33px, 191px, 181px, '../images/sprite.png', 'instagram-link', );
 $mail-active-name: 'mail-active';
-$mail-active-x: 39px;
-$mail-active-y: 49px;
-$mail-active-offset-x: -39px;
-$mail-active-offset-y: -49px;
+$mail-active-x: 149px;
+$mail-active-y: 132px;
+$mail-active-offset-x: -149px;
+$mail-active-offset-y: -132px;
 $mail-active-width: 16px;
 $mail-active-height: 11px;
-$mail-active-total-width: 85px;
-$mail-active-total-height: 67px;
+$mail-active-total-width: 191px;
+$mail-active-total-height: 181px;
 $mail-active-image: '../images/sprite.png';
-$mail-active: (39px, 49px, -39px, -49px, 16px, 11px, 85px, 67px, '../images/sprite.png', 'mail-active', );
+$mail-active: (149px, 132px, -149px, -132px, 16px, 11px, 191px, 181px, '../images/sprite.png', 'mail-active', );
 $mail-name: 'mail';
-$mail-x: 18px;
-$mail-y: 49px;
-$mail-offset-x: -18px;
-$mail-offset-y: -49px;
+$mail-x: 106px;
+$mail-y: 76px;
+$mail-offset-x: -106px;
+$mail-offset-y: -76px;
 $mail-width: 16px;
 $mail-height: 11px;
-$mail-total-width: 85px;
-$mail-total-height: 67px;
+$mail-total-width: 191px;
+$mail-total-height: 181px;
 $mail-image: '../images/sprite.png';
-$mail: (18px, 49px, -18px, -49px, 16px, 11px, 85px, 67px, '../images/sprite.png', 'mail', );
+$mail: (106px, 76px, -106px, -76px, 16px, 11px, 191px, 181px, '../images/sprite.png', 'mail', );
 $mtc-name: 'mtc';
-$mtc-x: 24px;
-$mtc-y: 0px;
-$mtc-offset-x: -24px;
-$mtc-offset-y: 0px;
+$mtc-x: 143px;
+$mtc-y: 109px;
+$mtc-offset-x: -143px;
+$mtc-offset-y: -109px;
 $mtc-width: 18px;
 $mtc-height: 17px;
-$mtc-total-width: 85px;
-$mtc-total-height: 67px;
+$mtc-total-width: 191px;
+$mtc-total-height: 181px;
 $mtc-image: '../images/sprite.png';
-$mtc: (24px, 0px, -24px, 0px, 18px, 17px, 85px, 67px, '../images/sprite.png', 'mtc', );
+$mtc: (143px, 109px, -143px, -109px, 18px, 17px, 191px, 181px, '../images/sprite.png', 'mtc', );
+$pinterest-link-name: 'pinterest-link';
+$pinterest-link-x: 143px;
+$pinterest-link-y: 37px;
+$pinterest-link-offset-x: -143px;
+$pinterest-link-offset-y: -37px;
+$pinterest-link-width: 32px;
+$pinterest-link-height: 32px;
+$pinterest-link-total-width: 191px;
+$pinterest-link-total-height: 181px;
+$pinterest-link-image: '../images/sprite.png';
+$pinterest-link: (143px, 37px, -143px, -37px, 32px, 32px, 191px, 181px, '../images/sprite.png', 'pinterest-link', );
 $search-active-name: 'search-active';
-$search-active-x: 44px;
-$search-active-y: 27px;
-$search-active-offset-x: -44px;
-$search-active-offset-y: -27px;
+$search-active-x: 106px;
+$search-active-y: 132px;
+$search-active-offset-x: -106px;
+$search-active-offset-y: -132px;
 $search-active-width: 17px;
 $search-active-height: 17px;
-$search-active-total-width: 85px;
-$search-active-total-height: 67px;
+$search-active-total-width: 191px;
+$search-active-total-height: 181px;
 $search-active-image: '../images/sprite.png';
-$search-active: (44px, 27px, -44px, -27px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'search-active', );
+$search-active: (106px, 132px, -106px, -132px, 17px, 17px, 191px, 181px, '../images/sprite.png', 'search-active', );
 $search-name: 'search';
-$search-x: 0px;
-$search-y: 27px;
-$search-offset-x: 0px;
-$search-offset-y: -27px;
+$search-x: 84px;
+$search-y: 132px;
+$search-offset-x: -84px;
+$search-offset-y: -132px;
 $search-width: 17px;
 $search-height: 17px;
-$search-total-width: 85px;
-$search-total-height: 67px;
+$search-total-width: 191px;
+$search-total-height: 181px;
 $search-image: '../images/sprite.png';
-$search: (0px, 27px, 0px, -27px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'search', );
+$search: (84px, 132px, -84px, -132px, 17px, 17px, 191px, 181px, '../images/sprite.png', 'search', );
 $telegram-name: 'telegram';
-$telegram-x: 47px;
-$telegram-y: 0px;
-$telegram-offset-x: -47px;
-$telegram-offset-y: 0px;
+$telegram-x: 62px;
+$telegram-y: 132px;
+$telegram-offset-x: -62px;
+$telegram-offset-y: -132px;
 $telegram-width: 17px;
 $telegram-height: 17px;
-$telegram-total-width: 85px;
-$telegram-total-height: 67px;
+$telegram-total-width: 191px;
+$telegram-total-height: 181px;
 $telegram-image: '../images/sprite.png';
-$telegram: (47px, 0px, -47px, 0px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'telegram', );
+$telegram: (62px, 132px, -62px, -132px, 17px, 17px, 191px, 181px, '../images/sprite.png', 'telegram', );
+$twitter-link-name: 'twitter-link';
+$twitter-link-x: 106px;
+$twitter-link-y: 0px;
+$twitter-link-offset-x: -106px;
+$twitter-link-offset-y: 0px;
+$twitter-link-width: 32px;
+$twitter-link-height: 33px;
+$twitter-link-total-width: 191px;
+$twitter-link-total-height: 181px;
+$twitter-link-image: '../images/sprite.png';
+$twitter-link: (106px, 0px, -106px, 0px, 32px, 33px, 191px, 181px, '../images/sprite.png', 'twitter-link', );
 $user-active-name: 'user-active';
-$user-active-x: 69px;
-$user-active-y: 21px;
-$user-active-offset-x: -69px;
-$user-active-offset-y: -21px;
+$user-active-x: 0px;
+$user-active-y: 163px;
+$user-active-offset-x: 0px;
+$user-active-offset-y: -163px;
 $user-active-width: 13px;
 $user-active-height: 18px;
-$user-active-total-width: 85px;
-$user-active-total-height: 67px;
+$user-active-total-width: 191px;
+$user-active-total-height: 181px;
 $user-active-image: '../images/sprite.png';
-$user-active: (69px, 21px, -69px, -21px, 13px, 18px, 85px, 67px, '../images/sprite.png', 'user-active', );
+$user-active: (0px, 163px, 0px, -163px, 13px, 18px, 191px, 181px, '../images/sprite.png', 'user-active', );
 $user-name: 'user';
-$user-x: 0px;
-$user-y: 49px;
-$user-offset-x: 0px;
-$user-offset-y: -49px;
+$user-x: 18px;
+$user-y: 163px;
+$user-offset-x: -18px;
+$user-offset-y: -163px;
 $user-width: 13px;
 $user-height: 18px;
-$user-total-width: 85px;
-$user-total-height: 67px;
+$user-total-width: 191px;
+$user-total-height: 181px;
 $user-image: '../images/sprite.png';
-$user: (0px, 49px, 0px, -49px, 13px, 18px, 85px, 67px, '../images/sprite.png', 'user', );
+$user: (18px, 163px, -18px, -163px, 13px, 18px, 191px, 181px, '../images/sprite.png', 'user', );
 $viber-name: 'viber';
-$viber-x: 22px;
-$viber-y: 27px;
-$viber-offset-x: -22px;
-$viber-offset-y: -27px;
+$viber-x: 40px;
+$viber-y: 132px;
+$viber-offset-x: -40px;
+$viber-offset-y: -132px;
 $viber-width: 17px;
 $viber-height: 17px;
-$viber-total-width: 85px;
-$viber-total-height: 67px;
+$viber-total-width: 191px;
+$viber-total-height: 181px;
 $viber-image: '../images/sprite.png';
-$viber: (22px, 27px, -22px, -27px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'viber', );
-$spritesheet-width: 85px;
-$spritesheet-height: 67px;
+$viber: (40px, 132px, -40px, -132px, 17px, 17px, 191px, 181px, '../images/sprite.png', 'viber', );
+$youtube-link-name: 'youtube-link';
+$youtube-link-x: 143px;
+$youtube-link-y: 0px;
+$youtube-link-offset-x: -143px;
+$youtube-link-offset-y: 0px;
+$youtube-link-width: 32px;
+$youtube-link-height: 32px;
+$youtube-link-total-width: 191px;
+$youtube-link-total-height: 181px;
+$youtube-link-image: '../images/sprite.png';
+$youtube-link: (143px, 0px, -143px, 0px, 32px, 32px, 191px, 181px, '../images/sprite.png', 'youtube-link', );
+$spritesheet-width: 191px;
+$spritesheet-height: 181px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($ball-1, $card, $mail-active, $mail, $mtc, $search-active, $search, $telegram, $user-active, $user, $viber, );
-$spritesheet: (85px, 67px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($arrow-down-red, $arrow-down-white, $arrow-left, $arrow-right-dark, $arrow-right, $arrow-up-red, $arrow-up-white, $ball-1, $card, $facebook-link, $google-link, $ic1, $ic2, $ic3, $ic4, $ic5, $ico-holder, $instagram-link, $mail-active, $mail, $mtc, $pinterest-link, $search-active, $search, $telegram, $twitter-link, $user-active, $user, $viber, $youtube-link, );
+$spritesheet: (191px, 181px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
